--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,7 +1,13 @@
 $c-gray: #C4C4C4;
 
+$c-dark-gray: #8b8b8b;
+
 $c-light-gray: #e7e7e770;
 
 $c-red: rgb(255, 97, 70);
 
-$c-light-red: rgb(255, 123, 100);;
+$c-light-red: rgb(250, 145, 126);;
+
+$description-max-width: 370px;
+
+$description-max-width--mobile: 185px;
