--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,9 +3,33 @@
 @import "./blocks/menu.scss";
 @import "./blocks/container.scss";
 @import "./blocks/info.scss";
+@import "./blocks/page.scss";
+@import "./blocks/poster.scss";
+@import "./blocks/movie-card.scss";
+@import "./blocks/movies-slider.scss";
+@import "./blocks/movie-page.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/animations.scss";
+@import "./blocks/collections-page.scss";
+@import "./blocks/person-card.scss";
+@import "./blocks/person-page.scss";
 
 .App {
   font-family: "Raleway";
   position: relative;
   min-height: 100vh;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    width: 5px;
+    background-color: $c-gray;
+  }
+
+  &::-webkit-scrollbar-track {
+    width: 5px;
+    background-color: $c-light-gray;
+  }
 }
