--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,20 +1,21 @@
 @import "../utils/_vars";
 
 .menu {
+  z-index: 10;
   --links-underline: 0;
-
   display: none;
   transition: all 0.1s ease, border-right 1s ease;
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
   width: 100%;
   height: 100vh;
   box-sizing: border-box;
 
   background-color: #fff;
   border-right: 0 solid $c-red;
-  position: absolute;
   transform: translateX(-100%);
-  top: 0;
-  bottom: 0;
 
   &__title {
     font-size: 35px;
