--- a/src/styles/blocks/poster.scss
+++ b/src/styles/blocks/poster.scss
@@ -1,48 +1,30 @@
 .poster {
   position: relative;
-  width: 100%;
+  width: 90%;
+  margin: 0 auto;
   box-sizing: border-box;
   padding-bottom: 50%;
-  background-color: black;
+  border-right: 0px solid $c-red;
+  border-left: 0px solid $c-red;
 
-  // &__timer {
-  //   width: 100%;
-  //   height: 10px;
-  //   position: absolute;
-  //   bottom: 0;
-  //   top: 100%;
-  //   transition: all 0s ease;
-  //   background-color: $c-red;
-
-  //   animation: 1s ease 0 none running;
-  // }
-
+  
+  
   &__img {
-    opacity: 0;
+    // opacity: 0;
     cursor: pointer;
     user-select: none;
     position: absolute;
+    height: 100%;
     width: 100%;
     box-sizing: border-box;
-    height: 100%;
+    // height: 100%;
     object-fit: cover;
     object-position: center;
     transition: all 0.1s ease,  border 0.1s ease;
-    border-right: 0px solid $c-red;
-    border-left: 0px solid $c-red;
-  
     &:hover {
       border-right: 60px solid $c-red;
       border-left: 60px solid $c-red;
     }
-
-    // ::after {
-
-    // }
-  }
-
-  &__img--active {
-    opacity: 1;
   }
 
   &__title {
@@ -54,7 +36,7 @@
     position: absolute;
     transform: translateY(100%);
     // top: calc(100% - 40px);
-    bottom: 50px;
+    bottom: 20%;
     left: 10%;
     right: 100%;
     // font-size: 30px;
