search page checkout added

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,6 +13,8 @@
 @import "./blocks/collections-page.scss";
 @import "./blocks/person-card.scss";
 @import "./blocks/person-page.scss";
+@import "./blocks/search-page.scss";
+@import "./blocks/checkbox.scss";
 
 .App {
   font-family: "Raleway";
