--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -20,7 +20,11 @@
     box-sizing: border-box;
   
     @include onMobile() {
-      padding: 0 20px;
+      // box-sizing:initial;
+      padding: 0;
+      // padding: 0 20px;
+      margin: 0 20px;
+      width: auto;
       display: flex;
       grid-template-columns: 1fr;
       background-color: transparent;
@@ -134,6 +138,10 @@
     // opacity: 1;
     width: 100%;
     transform: scaleX(100%);
+
+    @include onMobile() {
+      margin-left: 20px;
+    }
   }
 
   &__search-results-block {
