--- a/src/styles/blocks/person-card.scss
+++ b/src/styles/blocks/person-card.scss
@@ -60,4 +60,9 @@
     background-color: rgba(0, 0, 0, 0.404);
     color: #fff;
   }
+
+  @include onMobile() {
+    width: 150px;
+    height: 225px; 
+  }
 }
