--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,6 +15,9 @@
 @import "./blocks/person-page.scss";
 @import "./blocks/search-page.scss";
 @import "./blocks/checkbox.scss";
+@import "./blocks/actors-filter.scss";
+@import "./blocks/review.scss";
+@import "./blocks/login.scss";
 
 .App {
   font-family: "Raleway";
