--- a/src/styles/blocks/search-page.scss
+++ b/src/styles/blocks/search-page.scss
@@ -1,6 +1,69 @@
 .search-page {
-  &__genres {
+  &__filters-block {
     border: 3px solid $c-red;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__filter-visibility-toggler {
+    cursor: pointer;
+    // height: max-content;
+    width: 100%;
+    position: relative;
+    font-size: 30px;
+    font-weight: bold;
+    color: $c-red;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__filter-visibility-toggler-text {
+    color: #fff;
+    background-color: $c-light-red;
+    height: 34px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &::after {
+      display: inline-block;
+      content: '';
+      left: 100%;
+      right: 10px;
+      bottom: 50%;
+      transition: all 0.1s ease;
+      width: 24px;
+      height: 24px;
+      color: #fff;
+      background-image: url(../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/chevron-down.svg);
+      
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+    }
+
+    &--active {
+      &::after {
+        transition: all 0.1s ease;
+        transform: rotateZ(180deg);
+      }
+    }
+  }
+
+  &__filter-visibility-toggler-content {
+    width: 100%;
+    height: max-content;
+    display: none;
+
+    &--active {
+      display: block;
+    }
+  }
+
+  &__filter {
+    display: flex;
+    width: 100%;
+    font-size: 30px;
   }
 
   &__search {
