--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -6,7 +6,11 @@ $c-light-gray: #e7e7e770;
 
 $c-red: rgb(255, 97, 70);
 
-$c-light-red: rgb(250, 145, 126);;
+$c-light-red: rgb(250, 145, 126);
+
+$c-green: rgb(16, 221, 16);
+
+$c-light-green: rgb(123, 255, 123);
 
 $description-max-width: 370px;
 
