--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -18,6 +18,8 @@
 @import "./blocks/actors-filter.scss";
 @import "./blocks/review.scss";
 @import "./blocks/login.scss";
+@import "./blocks/addToWatchListButton.scss";
+@import "./blocks/watchlist.scss";
 
 .App {
   font-family: "Raleway";
