--- a/src/styles/blocks/login.scss
+++ b/src/styles/blocks/login.scss
@@ -16,6 +16,22 @@
   padding: 10px;
   border-radius: 10px;
 
+  &__err {
+    width: 100%;
+    background-color: $c-red;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    line-height: 40px;
+  }
+
+  &__loading {
+    width: 100px;
+    height: 100px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   &--active {
     transform: translate(50%, -50%) scale(100%);
     opacity: 1;
