--- a/src/styles/blocks/movie-page.scss
+++ b/src/styles/blocks/movie-page.scss
@@ -5,6 +5,37 @@
     width: 100%;
   }
 
+  &__action-title {
+    transform: all 0.2s ease;
+    display: inline;
+  }
+
+  &__action-title-link {
+    display: inline-block;
+    font-weight: bold;
+    color: #000;
+    text-decoration: none;
+    transition: transform 3s cubic-bezier(0,1.19,.29,.91), color 0.2s ease;
+
+    &::after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 3px;
+      background-color: $c-red;
+    }
+
+    &:hover {
+      color: $c-red;
+      transform: scale(110%) translateY(-3px);
+    }
+  }
+
+  &__action {
+    display: flex;
+    align-items: center;
+  }
+
   &__video {
     position: absolute;
     height: 100%;
