--- a/src/styles/blocks/person-card.scss
+++ b/src/styles/blocks/person-card.scss
@@ -10,7 +10,6 @@
   width: 200px;
   height: 300px;
   transition: all 0.1s ease;
-  background-image: url(../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/user-alt.svg);
   background-repeat: no-repeat;
   background-position: center;
 
@@ -24,6 +23,11 @@
   &:hover {
     transform: scale(110%);
     border-radius: 0;
+  }
+
+  &__empty-avatar {
+    width: 100%;
+    height: 100%;
   }
 
   &__img {
