--- a/src/styles/blocks/login.scss
+++ b/src/styles/blocks/login.scss
@@ -1,4 +1,5 @@
 .login {
+  box-sizing: border-box;
   z-index: 20;
   background: #fff;
   right: 50%;
@@ -33,7 +34,13 @@
   }
 
   &--active {
-    transform: translate(50%, -50%) scale(100%);
+    @include onMobile() {
+      width: 90%;
+      height: max-content;
+      
+    }
+
+    transform:  translate(50%, -50%) scale(100%);
     opacity: 1;
     box-shadow: 0px 15px 31px 1000px rgba(0, 0, 0, 0.527);
   }
