--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,8 @@
   margin: 0 auto;
   max-width: 1300px;
   padding: 30px 0;
+  box-sizing: border-box;
+  background-color: #fff;
   // box-shadow: 0 0 0 500px $c-red;
 
   &__title {
