--- a/src/styles/blocks/watchlist.scss
+++ b/src/styles/blocks/watchlist.scss
@@ -15,7 +15,7 @@
     margin-right: 20px;
     text-decoration: none;
     color: #000;
-    width: min-content;
+    width: max-content;
     cursor: pointer;
     line-height: 100%;
     font-size: 30px;
@@ -40,6 +40,7 @@
   }
 
   &__card {
+    position: relative;
     background-color: #fff;
     margin-bottom: 25px;
     height: 200px;
@@ -48,13 +49,23 @@
     border-radius: 50px;
     overflow: hidden;
     padding: 0;
+
+    @include onMobile() {
+      height: 100px;
+    }
   }
 
   &__remove-from-watchlist-block {
+    position: absolute;
+    right: 0;
+    left: 100%;
+    width: 50px;
+    // transform: translateX(-100%);
     height: 100%;
     display: flex;
     align-items: center;
-    background-color: $c-light-gray;
+    background-color: #fff;
+    border-left: 3px $c-gray solid;
     margin-left: auto;
   }
 
@@ -62,7 +73,7 @@
     cursor: pointer;
     object-fit: contain;
     width: min-content;
-    height: 200px;
+    height: 100%;
     // border: 4px $c-red solid;
     transition: all 0.2s ease;
     
@@ -75,6 +86,9 @@
 
   &__description {
     height: 100%;
+    @include onMobile() {
+      width: 80%;
+    }
   }
 
   &__description-title {
@@ -83,9 +97,15 @@
     background-color: $c-red;
     color: #fff;
     padding: 3px 5px;
+
+    @include onMobile() {
+      font-size: 20px;
+    }
   }
 
   &__description-genres-list {
+    width: 100%;
+    overflow: hidden;
     display: flex;
     list-style: none;
     margin: 0;
@@ -93,11 +113,18 @@
   }
 
   &__description-genre {
+    height: 10px;
+    width: max-content;
     border: 4px $c-light-green solid;
     font-weight: bold;
     color: $c-green;
     margin: 5px;
     border-radius: 20px;
     padding: 3px;
+
+    @include onMobile() {
+      font-size: 10px;
+      border-width: 3px;
+    }
   }
 }
