Picture component added

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -20,6 +20,7 @@
 @import "./blocks/login.scss";
 @import "./blocks/addToWatchListButton.scss";
 @import "./blocks/watchlist.scss";
+@import "./blocks/picture.scss";
 
 html {
   position: relative;
