--- a/src/styles/blocks/checkbox.scss
+++ b/src/styles/blocks/checkbox.scss
@@ -1,4 +1,5 @@
 .checkbox {
+  width: 100%;
   height: max-content;
   border-bottom: 0;
   position: relative;
@@ -6,50 +7,33 @@
 
   &__options-switcher {
     cursor: pointer;
-    display: flex;
+    // height: max-content;
+    width: 100%;
     position: relative;
-    align-content: center;
-    background-color: $c-red;
+    font-size: 30px;
+    font-weight: bold;
+    color: $c-red;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__options-switcher-text {
     color: #fff;
-    font-size: 24px;
-
-    &::after {
-      content: '';
-      position: absolute;
-      // left: 100%;
-      right: 10px;
-      transition: all 0.1s ease;
-      width: 24px;
-      height: 24px;
-      color: #fff;
-      background-image: url(../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/chevron-down.svg);
-      
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: contain;
-    }
-
-    &--active {
-      &::after {
-        transition: all 0.1s ease;
-        transform: rotateZ(180deg);
-      }
-    }
+    background-color: $c-light-red;
+    height: 34px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
   &__options-block {
-    transition: all 0.2s ease;
     overflow-y: hidden;
     height: 0;
     // transform: scaleY(0);
     width: 100%;
-  }
-
-  &__options-block--active {
     transition: all 0.2s ease;
     transform-origin: top;
     height: max-content;
-    // transform: scale(100%);
   }
 
   &__option {
