--- a/src/styles/blocks/login.scss
+++ b/src/styles/blocks/login.scss
@@ -17,13 +17,47 @@
   padding: 10px;
   border-radius: 10px;
 
+  &__sign-up-field {
+    display: block;
+    font-size: 13px;
+    margin: 0 auto;
+    color: #000
+  }
+
+  &__sign-up-link {
+    text-decoration: none;
+    color: #000;
+    position: relative;
+    display: inline-block;
+    transition: all 0.1s ease;
+    &::after {
+      position: absolute;
+      bottom: 0px;
+      content: '';
+      display: block;
+      width: 100%;
+      height: 2px;
+      background-color: $c-light-red;
+    }
+
+    &:hover {
+      font-weight: bold;
+      transform: scale(110%) translateY(-3px);
+      &::after {
+        background-color: $c-red;
+        bottom: -5px;
+        height: 4px;
+      }
+    }
+  }
+
   &__err {
     width: 100%;
     background-color: $c-red;
     color: #fff;
     display: flex;
     justify-content: center;
-    line-height: 40px;
+    // line-height: 40px;
   }
 
   &__loading {
