--- a/src/styles/blocks/person-page.scss
+++ b/src/styles/blocks/person-page.scss
@@ -1,11 +1,11 @@
 .person-page {
   &__poster {
-    margin-bottom: 50px;
-    display: block;
+    display: flex;
     position: relative;
-    padding-bottom: 150%;
+    margin-bottom: 50px;
     object-fit: cover;
     object-position: center;
+    background-color: $c-light-gray;
   }
 
   &__poster-img {
