--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -21,6 +21,10 @@
 @import "./blocks/addToWatchListButton.scss";
 @import "./blocks/watchlist.scss";
 @import "./blocks/picture.scss";
+@import "./blocks/mark-as-favorite.scss";
+@import "./blocks/lists-page.scss";
+@import "./blocks/add-to-list-window.scss";
+@import "./blocks/list-card.scss";
 
 html {
   position: relative;
