--- a/src/styles/blocks/movie-card.scss
+++ b/src/styles/blocks/movie-card.scss
@@ -2,7 +2,8 @@
 
 .movie-card {
   z-index: 1;
-  display: block;
+  order: 1;
+  display: flex;
   position: relative;
   --description-width: 0;
   --description-boder-right-width: 0;
@@ -16,6 +17,12 @@
 
   margin: 10px;
 
+  &__actions-container {
+    z-index: 100;
+    order: 100;
+    display: flex;
+  }
+
   &--last {
     margin-right: $description-max-width;
   }
@@ -28,6 +35,7 @@
 
   &__description {
     background-color: #fff;
+    order: 1;
     overflow: hidden;
     position: absolute;
     // box-sizing: border-box;
