--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -309,7 +309,7 @@
     font-weight: bold;
     font-size: 20px;
     line-height: 24px;
-
+    position: relative;
     letter-spacing: -0.065em;
 
     
