--- a/src/styles/blocks/login.scss
+++ b/src/styles/blocks/login.scss
@@ -12,7 +12,8 @@
 
   &__container {
     z-index: 20;
-    background: #fff;
+    background: rgba(228, 228, 228, 0.452);
+    backdrop-filter: blur(10px);
     right: 50%;
     top: 40vh;
     position: fixed;
