--- a/src/styles/blocks/person-card.scss
+++ b/src/styles/blocks/person-card.scss
@@ -48,7 +48,8 @@
     position: absolute;
     height: 20%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.404);
+    background-color: rgba(37, 37, 37, 0.377);
+    backdrop-filter: blur(2px);
     color: #fff;
   }
 
@@ -61,7 +62,8 @@
     position: absolute;
     height: 20%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.404);
+    background-color: rgba(37, 37, 37, 0.377);
+    backdrop-filter: blur(2px);
     color: #fff;
   }
 
