--- a/src/styles/blocks/profile-settings.scss
+++ b/src/styles/blocks/profile-settings.scss
@@ -1,3 +1,5 @@
+$border-radius: 20px;
+
 .profile-settings {
   width: 200px;
   position: absolute;
@@ -7,13 +9,14 @@
   height: max-content;
   background-color: rgba(230, 230, 230, 0.5);
   backdrop-filter: blur(10px);
-  border-radius: 20px;
+  border-radius: $border-radius;
   box-shadow: 10px 5px 5px rgba(3, 3, 3, 0.11);
   display: flex;
   flex-direction: column;
   // padding-top: 50px;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   box-sizing: border-box;
+  border: 1px $c-gray solid;
 
   &__header {
     position: relative;
@@ -23,11 +26,13 @@
     display: flex;
     align-items: center;
     padding-left: 10px;
+    box-sizing: border-box;
     font-size: 20px;
     color: white;
     font-weight: bold;
     width: 100%;
     height: 50px;
+    border-radius: $border-radius $border-radius 0 0;
   }
 
   &__label {
@@ -40,6 +45,7 @@
   }
 
   &__option {
+    position: relative;
     height: 45px;
     width: 100%;
     display: flex;
@@ -50,10 +56,36 @@
     font-weight: bold;
     text-decoration: none;
     border-bottom: 2px rgba(255, 255, 255, 0.267) solid;
-    
+    transition: all 0.1s ease;
+    cursor: pointer;
 
     &:hover {
-      background-color: rgba(255, 255, 255, 0.507);
+      background-color: $c-red;
     }
+
+    &--last {
+      border-radius: 0 0 $border-radius $border-radius;
+    }
+  }
+
+  &__backdrop-content {
+    border: 1px $c-gray solid;
+    width: max-content;
+    min-width: 150px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    // transform: translateX(-100%);
+    transform-origin: right top;
+    height: max-content;
+    background-color: rgba(255, 255, 255, 0.644);
+    backdrop-filter: blur(10px);
+    border-radius: $border-radius 0 $border-radius $border-radius;
+    box-shadow: 10px 5px 5px rgba(3, 3, 3, 0.11);
+    display: flex;
+    flex-direction: column;
+    // padding-top: 50px;
+    overflow-x: hidden;
+    box-sizing: border-box;
   }
 }
