--- a/src/styles/blocks/add-to-list-window.scss
+++ b/src/styles/blocks/add-to-list-window.scss
@@ -70,8 +70,11 @@
   &__list-element {
     margin-bottom: 5px;
     cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
     font-size: large;
-    width: 100%;
     height: 30px;
     border: 2px solid $c-gray;
     transition: all 0.3s ease;
