--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -151,7 +151,7 @@
     font-size: 100%;
     border-radius: 0;
     padding-left: 20px;
-    border: 1px solid $c-gray;
+    border: 2px $c-gray solid;
     outline: none;
     width: 0;
     transform-origin: right;
@@ -160,15 +160,15 @@
     height: 45px;
     transition: all 0.5s ease;
     transition: opacity 0.1 ease;
-
+    border-radius: 5px;
     @include onMobile() {
       position: absolute;
     }
 
     &:focus {
       opacity: 1;
-      border: 1px solid black;
-      box-shadow: 0 1px 2px $c-red;
+      box-shadow: -5px -5px 20px $c-gray;
+      // box-shadow: 0 1px 2px $c-red;
     }
   }
 
